<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single" android:id="@+id/preOrder">

        <item
            android:id="@+id/nav_preorder_list"
            android:icon="@drawable/ic_preorderass"
            android:title="@string/OrderList"/>

        <item
            android:id="@+id/nav_preorder_assigned"
            android:icon="@drawable/ic_delivlist"
            android:title="@string/AssignedOrders"/>
    </group>

    <group android:checkableBehavior="single" android:id="@+id/Order">

        <item
            android:id="@+id/nav_delivery_delete"
            android:icon="@drawable/ic_menu_delete"
            android:title="@string/DeliveryDelete"/>

        <item
            android:id="@+id/nav_delivery_status"
            android:icon="@drawable/ic_delstatusupdate"
            android:title="@string/DeliveryStatus"/>

        <item
            android:id="@+id/nav_delivery_debt"
            android:icon="@drawable/icon_expense"
            android:title="@string/DeliveryDebs"/>

    </group>


</menu>