<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/preOrder"/>

    <group android:checkableBehavior="single" android:id="@+id/Order">
        <item
                android:id="@+id/nav_delivery_list"
                android:icon="@drawable/ic_delivlist"
                android:title="@string/DeliveryList"/>
    <!--    <item
            android:id="@+id/nav_delivery_delete"
            android:icon="@drawable/ic_menu_delete"
            android:title="@string/DeliveryDelete"/>
-->
        <item
            android:id="@+id/nav_delivery_debt"
            android:icon="@drawable/icon_expense"
            android:title="@string/DeliveryDebs"/>

        <item
                android:id="@+id/nav_delivery_assign"
                android:icon="@drawable/ic_menu_manage"
        android:title="@string/AssignDelivery"/>
    </group>

    <item android:title="Өздүк иштер">
        <menu>

            <item
                    android:id="@+id/nav_changePassword"
                    android:icon="@drawable/ic_menu_password"
                    android:title="@string/ChangePassword"/>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/Logout"/>

        </menu>
    </item>

</menu>
