<?xml version="1.0" encoding="utf-8"?>
<com.kg.yldampostman.helper.DashboardLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@color/white">


    <!--  News Feed Button -->
    <Button
            android:id="@+id/btn_order_list_assigned"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dash_preorders_assigned"
            android:text="@string/AssignedOrders"/>

    <!--  Friends Button -->
    <Button
            android:id="@+id/btn_new_delivery"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dash_delivery_assign"
            android:text="@string/AcceptDelivery"/>

    <!--  Messages Button -->
    <Button
            android:id="@+id/btn_deliver_delivery"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dash_delivered"
            android:text="@string/DeliverDelivery"/>


    <!--  Events Button -->
    <Button
            android:id="@+id/btn_update_delivery"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dash_update"
            android:text="@string/UpdateDelivery"/>


</com.kg.yldampostman.helper.DashboardLayout>