<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_user25">

        <menu>

            <item
                android:id="@+id/action_password_change"
                android:orderInCategory="1"
                android:title="@string/ChangePassword"
                android:icon="@drawable/ic_menu_password"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_logout"
                android:orderInCategory="1"
                android:title="@string/Logout"
                android:icon="@drawable/ic_menu_logout"
                app:showAsAction="always" />

        </menu>

    </item>

</menu>