<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:background="@color/light_gray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_Origin"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                style="@style/InlineLabels"
                android:text="@string/Origin"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"/>

            <Spinner
                android:id="@+id/sp_Origin"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.7"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_Destination"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                style="@style/InlineLabels"
                android:text="@string/Destination"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"/>

            <Spinner
                android:id="@+id/sp_Destination"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.7"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_Name"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                style="@style/InlineLabels"
                android:text="@string/Name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"/>

            <EditText
                android:id="@+id/ed_Name"
                style="@style/InputTexts"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:inputType="textPersonName"
                android:layout_marginRight="20dp"
                android:layout_marginTop="3dp"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_Phone"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                style="@style/InlineLabels"
                android:text="@string/PhoneNo"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"/>

            <EditText
                android:id="@+id/ed_Tel"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                style="@style/InputTexts"
                android:inputType="phone"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:layout_marginTop="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_Address"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                style="@style/InlineLabels"
                android:text="@string/Address"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"/>

            <EditText
                android:id="@+id/ed_Address"
                style="@style/InputTexts"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:inputType="textPersonName"
                android:layout_marginRight="20dp"
                android:layout_marginTop="3dp"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_Date"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                style="@style/InlineLabels"
                android:text="@string/Date"
                android:layout_marginLeft="20dp"
                />

            <EditText
                android:id="@+id/ed_Date"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                style="@style/MainLabels"
                android:focusable="false"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:layout_marginTop="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView83"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                style="@style/InlineLabels"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:text="@string/Postman"/>

            <Spinner
                android:id="@+id/spinner_postman"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.7"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:gravity="center_vertical"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/light_gray"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/List"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>