<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              android:background="@color/white">


    <androidx.cardview.widget.CardView
            android:id="@+id/card_view_sender"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            card_view:cardBackgroundColor="@color/corporateBackColor"
            card_view:cardCornerRadius="@dimen/card_album_radius"
            card_view:elevation="5dp">

        <TextView
                android:id="@+id/textView744"
                style="@style/MainLabels"
                android:text="@string/CustomerInformation"/>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            card_view:cardBackgroundColor="@color/corporateBackColor"
            card_view:cardCornerRadius="@dimen/card_album_radius"
            card_view:contentPadding="10dp"
            card_view:elevation="5dp">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView8"
                        style="@style/InlineLabels"
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:text="@string/City"/>

                <Spinner
                        android:id="@+id/spinner_custCity"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="0dp"
                        android:layout_weight="0.7"
                        android:background="@color/white"
                        android:gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView11"
                        style="@style/InlineLabels"
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:text="@string/Address"/>


                <EditText
                        android:id="@+id/custAddress"
                        style="@style/InputTexts"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:inputType="textCapSentences|textPersonName"
                        android:text=""/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">


                <TextView
                        android:id="@+id/textView10"
                        style="@style/InlineLabels"
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:text="@string/PhoneNo"/>

                <EditText
                        android:id="@+id/custPhone"
                        style="@style/InputTexts"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:inputType="phone"
                        android:text=""/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView9"
                        style="@style/InlineLabels"
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:text="@string/FullName"/>

                <EditText
                        android:id="@+id/custName"
                        style="@style/InputTexts"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:inputType="textPersonName|textCapWords"
                        android:text=""/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView111"
                        style="@style/InlineLabels"
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:text="@string/Company"/>

                <EditText
                        android:id="@+id/custCompany"
                        style="@style/InputTexts"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:inputType="textPersonName"
                        android:text=""/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/customer_id"
                        style="@style/InputTexts"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:inputType="textPersonName"
                        android:text=""/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/card_view_chd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            card_view:cardCornerRadius="@dimen/card_album_radius"
            card_view:elevation="5dp"
            card_view:cardBackgroundColor="@color/corporateBackColor">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/btn_delete_customer"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/Delete"
                    android:textColor="@color/white"/>

            <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>

            <Button
                    android:id="@+id/btn_save_customer_info"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/saveInformation"
                    android:textColor="@color/white"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:srcCompat="@drawable/logoo"
            android:layout_marginTop="50dp"/>

</LinearLayout>